--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3"
   }
 }
